--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -22,6 +22,8 @@ dataSources:
       abis:
         - name: VisorFactory
           file: ./abis/VisorFactory.json
+        - name: Visor
+          file: ./abis/Visor.json
       eventHandlers:
         - event: Approval(indexed address,indexed address,indexed uint256)
           handler: handleApproval
@@ -192,3 +194,53 @@ dataSources:
         - event: VaultFactoryRemoved(address)
           handler: handleVaultFactoryRemoved
       file: ./src/mappings/hypervisor.ts
+  - kind: ethereum/contract
+    name: UniswapV3HypervisorFactory
+    network: mainnet
+    source:
+      address: "0xF18A3fEa14bf184fe6449AF985897523D7021F2a"
+      abi: UniswapV3HypervisorFactory
+      startBlock: 12549228
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/uniswapV3/hypervisorFactory.ts
+      entities:
+        - UniswapV3Hypervisor
+      abis:
+        - name: UniswapV3HypervisorFactory
+          file: ./abis/UniswapV3HypervisorFactory.json
+        - name: UniswapV3Hypervisor
+          file: ./abis/UniswapV3Hypervisor.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: HypervisorCreated(address,address,uint24,address,uint256)
+          handler: handleHypervisorCreated
+templates:
+  - name: UniswapV3Hypervisor
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      abi: UniswapV3Hypervisor
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/uniswapV3/hypervisor.ts
+      entities:
+        - UniswapV3Hypervisor
+        - UniswapV3Deposit
+        - UniswapV3Rebalance
+        - UniswapV3Withdraw
+      abis:
+        - name: UniswapV3Hypervisor
+          file: ./abis/UniswapV3Hypervisor.json
+      eventHandlers:
+        - event: Deposit(indexed address,indexed address,uint256,uint256,uint256)
+          handler: handleDeposit
+        - event: Withdraw(indexed address,indexed address,uint256,uint256,uint256)
+          handler: handleWithdraw
+        - event: Rebalance(int24,uint256,uint256,uint256,uint256,uint256)
+          handler: handleRebalance
