Aggregation to the factory level

--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -236,6 +236,7 @@ dataSources:
       language: wasm/assemblyscript
       file: ./src/mappings/uniswapV3/hypervisorFactory.ts
       entities:
+        - UniswapV3HypervisorFactory
         - UniswapV3Hypervisor
       abis:
         - name: UniswapV3HypervisorFactory
@@ -244,6 +245,8 @@ dataSources:
           file: ./abis/UniswapV3Hypervisor.json
         - name: ERC20
           file: ./abis/ERC20.json
+        - name: UniswapV3Pool
+          file: ./abis/UniswapV3Pool.json
       eventHandlers:
         - event: HypervisorCreated(address,address,uint24,address,uint256)
           handler: handleHypervisorCreated
@@ -266,6 +269,8 @@ templates:
       abis:
         - name: UniswapV3Hypervisor
           file: ./abis/UniswapV3Hypervisor.json
+        - name: UniswapV3Pool
+          file: ./abis/UniswapV3Pool.json
       eventHandlers:
         - event: Deposit(indexed address,indexed address,uint256,uint256,uint256)
           handler: handleDeposit
