--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -63,13 +63,14 @@ dataSources:
         - event: Transfer(indexed address,indexed address,indexed uint256)
           handler: handleTransfer
       file: ./src/mappings/visorFactory.ts
+  {{#liquidityMining}}
   - kind: ethereum/contract
-    name: Hypervisor
+    name: {{name}}
     network: mainnet
     source:
-      address: "0xF178d88D2F6F97CA32F92b465987068e1Cce41c5"
+      address: "{{address}}"
       abi: Hypervisor
-      startBlock: 12108493
+      startBlock: {{startBlock}}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -103,126 +104,7 @@ dataSources:
         - event: VaultFactoryRemoved(address)
           handler: handleVaultFactoryRemoved
       file: ./src/mappings/hypervisor.ts
-  - kind: ethereum/contract
-    name: USDC-Hypervisor
-    network: mainnet
-    source:
-      address: "0x96C105E9e9eAb36eb8e2f851A5dabFbBd397c085"
-      abi: Hypervisor
-      startBlock: 12108420
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.4
-      language: wasm/assemblyscript
-      entities:
-        - Hypervisor
-        - StakedToken
-        - RewardToken
-      abis:
-        - name: Hypervisor
-          file: ./abis/Hypervisor.json
-        - name: ERC20
-          file: ./abis/ERC20.json
-      eventHandlers:
-        - event: BonusTokenRegistered(address)
-          handler: handleBonusTokenRegistered
-        - event: HypervisorCreated(address,address)
-          handler: handleHypervisorCreated
-        - event: HypervisorFunded(uint256,uint256)
-          handler: handleHypervisorFunded
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
-        - event: RewardClaimed(address,address,address,uint256)
-          handler: handleRewardClaimed
-        - event: Staked(address,uint256)
-          handler: handleStaked
-        - event: Unstaked(address,uint256)
-          handler: handleUnstaked
-        - event: VaultFactoryRegistered(address)
-          handler: handleVaultFactoryRegistered
-        - event: VaultFactoryRemoved(address)
-          handler: handleVaultFactoryRemoved
-      file: ./src/mappings/hypervisor.ts
-  - kind: ethereum/contract
-    name: USDT-Hypervisor
-    network: mainnet
-    source:
-      address: "0xEBaE3CB14CE6C2F26B40b747fd92cCaf03B98659"
-      abi: Hypervisor
-      startBlock: 12108439
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.4
-      language: wasm/assemblyscript
-      entities:
-        - Hypervisor
-        - StakedToken
-        - RewardToken
-      abis:
-        - name: Hypervisor
-          file: ./abis/Hypervisor.json
-        - name: ERC20
-          file: ./abis/ERC20.json
-      eventHandlers:
-        - event: BonusTokenRegistered(address)
-          handler: handleBonusTokenRegistered
-        - event: HypervisorCreated(address,address)
-          handler: handleHypervisorCreated
-        - event: HypervisorFunded(uint256,uint256)
-          handler: handleHypervisorFunded
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
-        - event: RewardClaimed(address,address,address,uint256)
-          handler: handleRewardClaimed
-        - event: Staked(address,uint256)
-          handler: handleStaked
-        - event: Unstaked(address,uint256)
-          handler: handleUnstaked
-        - event: VaultFactoryRegistered(address)
-          handler: handleVaultFactoryRegistered
-        - event: VaultFactoryRemoved(address)
-          handler: handleVaultFactoryRemoved
-      file: ./src/mappings/hypervisor.ts
-  - kind: ethereum/contract
-    name: VISR-ETH-Hypervisor
-    network: mainnet
-    source:
-      address: "0x64fcDD0DE44f4bd04c039B0664FB95EF033D4efb"
-      abi: Hypervisor
-      startBlock: 12108528
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.4
-      language: wasm/assemblyscript
-      entities:
-        - Hypervisor
-        - StakedToken
-        - RewardToken
-      abis:
-        - name: Hypervisor
-          file: ./abis/Hypervisor.json
-        - name: ERC20
-          file: ./abis/ERC20.json
-      eventHandlers:
-        - event: BonusTokenRegistered(address)
-          handler: handleBonusTokenRegistered
-        - event: HypervisorCreated(address,address)
-          handler: handleHypervisorCreated
-        - event: HypervisorFunded(uint256,uint256)
-          handler: handleHypervisorFunded
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
-        - event: RewardClaimed(address,address,address,uint256)
-          handler: handleRewardClaimed
-        - event: Staked(address,uint256)
-          handler: handleStaked
-        - event: Unstaked(address,uint256)
-          handler: handleUnstaked
-        - event: VaultFactoryRegistered(address)
-          handler: handleVaultFactoryRegistered
-        - event: VaultFactoryRemoved(address)
-          handler: handleVaultFactoryRemoved
-      file: ./src/mappings/hypervisor.ts
+    {{/liquidityMining}}
   - kind: ethereum/contract
     name: UniswapV3HypervisorFactory
     network: mainnet
@@ -236,6 +118,7 @@ dataSources:
       language: wasm/assemblyscript
       file: ./src/mappings/uniswapV3/hypervisorFactory.ts
       entities:
+        - UniswapV3HypervisorFactory
         - UniswapV3Hypervisor
       abis:
         - name: UniswapV3HypervisorFactory
