--- a/v3only.template.yaml
+++ b/v3only.template.yaml
@@ -15,6 +15,7 @@ dataSources:
       language: wasm/assemblyscript
       file: ./src/mappings/uniswapV3/hypervisorFactory.ts
       entities:
+        - UniswapV3HypervisorFactory
         - UniswapV3Hypervisor
       abis:
         - name: UniswapV3HypervisorFactory
