Added base and limit range data to rebalance entity

--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -16,6 +16,7 @@ dataSources:
       entities:
         - VisrToken
         - VisrTokenDayData
+        - VisrDistribution
         - Visor
       abis:
         - name: ERC20
