--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -132,6 +132,10 @@ dataSources:
           file: ./abis/UniswapV3Hypervisor.json
         - name: ERC20
           file: ./abis/ERC20.json
+        - name: ERC20NameBytes
+          file: ./abis/ERC20NameBytes.json
+        - name: ERC20SymbolBytes
+          file: ./abis/ERC20SymbolBytes.json
         - name: UniswapV3Pool
           file: ./abis/UniswapV3Pool.json
       eventHandlers:
