--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -249,6 +249,10 @@ dataSources:
           file: ./abis/UniswapV3Hypervisor.json
         - name: ERC20
           file: ./abis/ERC20.json
+        - name: ERC20NameBytes
+          file: ./abis/ERC20NameBytes.json
+        - name: ERC20SymbolBytes
+          file: ./abis/ERC20SymbolBytes.json
         - name: UniswapV3Pool
           file: ./abis/UniswapV3Pool.json
       eventHandlers:
@@ -276,6 +280,10 @@ dataSources:
           file: ./abis/UniswapV3Hypervisor.json
         - name: ERC20
           file: ./abis/ERC20.json
+        - name: ERC20NameBytes
+          file: ./abis/ERC20NameBytes.json
+        - name: ERC20SymbolBytes
+          file: ./abis/ERC20SymbolBytes.json
         - name: UniswapV3Pool
           file: ./abis/UniswapV3Pool.json
       eventHandlers:
@@ -303,6 +311,10 @@ dataSources:
           file: ./abis/UniswapV3Hypervisor.json
         - name: ERC20
           file: ./abis/ERC20.json
+        - name: ERC20NameBytes
+          file: ./abis/ERC20NameBytes.json
+        - name: ERC20SymbolBytes
+          file: ./abis/ERC20SymbolBytes.json
         - name: UniswapV3Pool
           file: ./abis/UniswapV3Pool.json
       eventHandlers:
