--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -354,3 +354,25 @@ templates:
           handler: handleSetDepositMax
         - function: setMaxTotalSupply(uint256)
           handler: handleSetMaxTotalSupply
+  - name: UniswapV3Pool
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      abi: UniswapV3Pool
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/uniswapV3/pool.ts
+      entities:
+        - UniswapV3Hypervisor
+        - UniswapV3HypervisorDayData
+        - UniswapV3Pool
+      abis:
+        - name: UniswapV3Hypervisor
+          file: ./abis/UniswapV3Hypervisor.json
+        - name: UniswapV3Pool
+          file: ./abis/UniswapV3Pool.json
+      eventHandlers:
+        - event: Swap(indexed address,indexed address,int256,int256,uint160,uint128,int24)
+          handler: handleSwap
