--- a/v3only.template.yaml
+++ b/v3only.template.yaml
@@ -19,6 +19,8 @@ dataSources:
       entities:
         - UniswapV3HypervisorFactory
         - UniswapV3Hypervisor
+        - UniswapV3Pool
+        - Token
       abis:
         - name: UniswapV3HypervisorFactory
           file: ./abis/UniswapV3HypervisorFactory.json
@@ -83,7 +85,6 @@ templates:
       entities:
         - UniswapV3Hypervisor
         - UniswapV3HypervisorDayData
-        - UniswapV3Pool
       abis:
         - name: UniswapV3Hypervisor
           file: ./abis/UniswapV3Hypervisor.json
