Add counts for visor and hypervisors

--- a/v3only.template.yaml
+++ b/v3only.template.yaml
@@ -50,6 +50,7 @@ templates:
       language: wasm/assemblyscript
       file: ./src/mappings/uniswapV3/hypervisor.ts
       entities:
+        - Visor
         - UniswapV3Hypervisor
         - UniswapV3Deposit
         - UniswapV3Rebalance
