--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -343,6 +343,98 @@ dataSources:
       eventHandlers:
         - event: HypervisorCreated(address,address,uint24,address,uint256)
           handler: handleHypervisorCreated
+  - name: TCR-ETH
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x8cd73cb1e1fa35628e36b8c543c5f825cd4e77f1"
+      abi: UniswapV3Hypervisor
+      startBlock: 13328071
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/uniswapV3/hypervisor.ts
+      entities:
+        - Visor
+        - UniswapV3Hypervisor
+        - UniswapV3Deposit
+        - UniswapV3Rebalance
+        - UniswapV3Withdraw
+        - UniswapV3HypervisorShare
+      abis:
+        - name: UniswapV3Hypervisor
+          file: ./abis/UniswapV3Hypervisor.json
+        - name: UniswapV3Pool
+          file: ./abis/UniswapV3Pool.json
+      eventHandlers:
+        - event: Deposit(indexed address,indexed address,uint256,uint256,uint256)
+          handler: handleDeposit
+        - event: Withdraw(indexed address,indexed address,uint256,uint256,uint256)
+          handler: handleWithdraw
+        - event: Rebalance(int24,uint256,uint256,uint256,uint256,uint256)
+          handler: handleRebalance
+      callHandlers:
+        - function: setDepositMax(uint256,uint256)
+          handler: handleSetDepositMax
+        - function: setMaxTotalSupply(uint256)
+          handler: handleSetMaxTotalSupply
+  - kind: ethereum/contract
+    name: FeeDistributor
+    network: mainnet
+    source:
+      address: "0x07432C021f0A65857a3Ab608600B9FEABF568EA0"
+      abi: FeeDistributor
+      startBlock: 13129847
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/feeDistributor.ts
+      entities:
+        - Visor
+        - EthToken
+        - EthDistribution
+        - EthDayData
+      abis:
+        - name: FeeDistributor
+          file: ./abis/FeeDistributor.json
+        - name: UniswapV3Pool
+          file: ./abis/UniswapV3Pool.json
+      eventHandlers:
+        - event: Multisended(uint256,address)
+          handler: handleMultisended
+      callHandlers:
+        - function: multisendEther(address[],uint256[])
+          handler: handleMultisendEther
+  - kind: ethereum/contract
+    name: FeeDistributor1
+    network: mainnet
+    source:
+      address: "0x8451122f06616baff7feb10afc2c4f4132fc4709"
+      abi: FeeDistributor
+      startBlock: 13129208
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/feeDistributor.ts
+      entities:
+        - Visor
+        - EthToken
+        - EthDistribution
+        - EthDayData
+      abis:
+        - name: FeeDistributor
+          file: ./abis/FeeDistributor.json
+        - name: UniswapV3Pool
+          file: ./abis/UniswapV3Pool.json
+      eventHandlers:
+        - event: Multisended(uint256,address)
+          handler: handleMultisended
+      callHandlers:
+        - function: multisendEther(address[],uint256[])
+          handler: handleMultisendEther
 templates:
   - name: UniswapV3Hypervisor
     kind: ethereum/contract
