--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -31,7 +31,7 @@ dataSources:
           handler: handleTransfer
       file: ./src/mappings/visrToken.ts
   {{/VisrToken}}
-  {{#RewardHypervisor}}
+  {{#vVisrToken}}
   - kind: ethereum/contract
     name: {{name}}
     network: {{network}}
@@ -52,8 +52,8 @@ dataSources:
       eventHandlers:
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
-      file: ./src/mappings/RewardHypervisor.ts
-  {{/RewardHypervisor}}
+      file: ./src/mappings/vVisrToken.ts
+  {{/vVisrToken}}
   {{#VisorFactory}}
   - kind: ethereum/contract
     name: {{name}}
@@ -196,6 +196,12 @@ dataSources:
           file: ./abis/UniswapV3Hypervisor.json
         - name: UniswapV3Pool
           file: ./abis/UniswapV3Pool.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+        - name: ERC20NameBytes
+          file: ./abis/ERC20NameBytes.json
+        - name: ERC20SymbolBytes
+          file: ./abis/ERC20SymbolBytes.json
       eventHandlers:
         - event: Deposit(indexed address,indexed address,uint256,uint256,uint256)
           handler: handleDeposit
