--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -30,12 +30,12 @@ dataSources:
           handler: handleTransfer
       file: ./src/mappings/visrToken.ts
   - kind: ethereum/contract
-    name: RewardHypervisor
+    name: vVisrToken
     network: mainnet
     source:
-      address: "0x57256381d8010dcf50daaf3421620ba9798ba7b5"
+      address: "0x3a84ad5d16adbe566baa6b3dafe39db3d5e261e5"
       abi: ERC20
-      startBlock: 12926408
+      startBlock: 13148639
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -49,7 +49,7 @@ dataSources:
       eventHandlers:
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
-      file: ./src/mappings/RewardHypervisor.ts
+      file: ./src/mappings/vVisrToken.ts
   - kind: ethereum/contract
     name: VisorFactory
     network: mainnet
@@ -367,6 +367,12 @@ dataSources:
           file: ./abis/UniswapV3Hypervisor.json
         - name: UniswapV3Pool
           file: ./abis/UniswapV3Pool.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+        - name: ERC20NameBytes
+          file: ./abis/ERC20NameBytes.json
+        - name: ERC20SymbolBytes
+          file: ./abis/ERC20SymbolBytes.json
       eventHandlers:
         - event: Deposit(indexed address,indexed address,uint256,uint256,uint256)
           handler: handleDeposit
