Fix VISR staked numbers

--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -44,6 +44,7 @@ dataSources:
       apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
+        - VisrToken
         - RewardHypervisor
         - RewardHypervisorShare
       abis:
