--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -41,6 +41,7 @@ dataSources:
       apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
+        - VisrToken
         - RewardHypervisor
         - RewardHypervisorShare
       abis:
